<resources>
    <string name="app_name">Android Weather App</string>
    <string name="city">City</string>
    <string name="searchicon">searchIcon</string>
    <string name="today">Today</string>
    <string name="imageviewweathericon">imageViewWeatherIcon</string>
    <string name="humidity">Humidity</string>
    <string name="next_5_days">Next 5 days</string>
    <string name="monday">Monday</string>
    <string name="_12_00">12:00</string>
    <string name="rain">Rain</string>
    <string name="_25">25°</string>
    <string name="_14_00">14:00</string>
    <string name="search_by_location">Search by location</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
</resources>