<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.screens.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <EditText
                    android:id="@+id/search_bar_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bgd"
                    android:drawableEnd="@drawable/ic_search"
                    android:drawablePadding="5dp"
                    android:hint="@string/search_by_location"
                    android:textColorHint="@color/light_gray_600"
                    android:padding="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill,TextFields" />

                <TextView
                    android:id="@+id/cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/city"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/search_bar_edittext" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checkable="false"
                    android:checked="true"
                    android:clickable="false"
                    android:text="@string/today"
                    android:textColor="@color/chipTextColor"
                    app:chipBackgroundColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cityName"/>

                <LinearLayout
                    android:id="@+id/layoutSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chipToday"
                    app:layout_constraintBottom_toTopOf="@+id/container_forecast"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tvCelsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/celsius"
                        android:textSize="18sp"
                        android:textColor="@android:color/holo_red_dark"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/tempSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/white"
                        android:trackTint="@color/light_gray_500"
                        android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>

                    <TextView
                        android:id="@+id/tvFahrenheit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fahrenheit"
                        android:textSize="18sp"
                        android:textColor="@android:color/holo_green_dark"
                        android:paddingStart="10dp"/>

                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/container_forecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#DC0000"
                    app:cardCornerRadius="20dp"
                    android:layout_marginTop="10dp"
                    app:strokeWidth="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutSwitch">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/container_forecast_bgd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="30dp">

                        <ImageView
                            android:id="@+id/weatherIcon"
                            android:layout_width="134dp"
                            android:layout_height="134dp"
                            android:contentDescription="@string/imageviewweathericon"
                            android:src="@drawable/a10d_svg"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textViewTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_25"
                            android:textColor="@color/white"
                            android:textSize="100sp"
                            tools:text="25°"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/weatherIcon"
                            app:layout_constraintBottom_toBottomOf="@id/weatherIcon"/>

                        <TextView
                            android:id="@+id/textViewWeatherMain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/rain"
                            android:textColor="@color/white"
                            android:textSize="23sp"
                            tools:text="Clouds &amp; Sun"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textViewTemperature"/>

                        <TextView
                            android:id="@+id/textViewHumidityHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/humidity"
                            android:textColor="@color/white"
                            android:textSize="19sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textViewWeatherMain"/>

                        <TextView
                            android:id="@+id/textViewHumidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            android:text="35°"
                            android:textColor="@color/whiteWithHalfOpacity"
                            android:textSize="27sp"
                            tools:text="35°"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/textViewHumidityHeader"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/textViewForecastHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/next_5_days"
                    android:textColor="@color/mainTextColor"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/container_forecast"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewForecastHeader"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_forecast" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>